--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   internet_connection_checker_plus: ^2.5.2
   flutter_zoom_drawer: ^3.2.0
   flutter_svg: ^2.0.16
+  rename_app: ^1.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
